--- a/LESS/index.less
+++ b/LESS/index.less
@@ -10,6 +10,6 @@ html, body {
   margin: 0;
   padding: 0;
   font-family: 'Roboto';
-  // background-color: #fffef7;
-  background-color: red;
+  background-color: #fffef7;
+  
 }
