--- a/Menu/Menu.less
+++ b/Menu/Menu.less
@@ -5,17 +5,19 @@
 }
 
 .menu {
-  display: none;
+  // display: none;
   position: fixed;
   top: 75px;
   left: 0;
-  width: 350px;
+  width: 0px;
   height: 100vh; /* This give the height 100% of the screen or, '100% of View Height' */
   background-color: #81C784;
   border: 1px solid #004D40;
   border-left: none;
   border-bottom: none;
   z-index: 2; /* This set the layer level of the element, it has precendence over initial level of 1*/
+  -webkit-transition: all 1s linear 0s;
+  transition: all 1s linear 0s;
 }
 
 .menu ul li{
@@ -26,5 +28,9 @@
 }
 
 .menu--open {
-  display: block;
+  // display: block;
+  // transition: all 3s ease;
+  width: 350px;
+  -webkit-transition: all 1s linear 0s;
+  transition: all 1s linear 0s;
 }
