--- a/css/index.css
+++ b/css/index.css
@@ -82,11 +82,11 @@
   cursor: pointer;
 }
 .menu {
-  display: none;
   position: fixed;
   top: 75px;
   left: 0;
-  width: 350px;
+  width: 0px;
+  opacity: 0;
   height: 100vh;
   /* This give the height 100% of the screen or, '100% of View Height' */
   background-color: #81C784;
@@ -95,6 +95,8 @@
   border-bottom: none;
   z-index: 2;
   /* This set the layer level of the element, it has precendence over initial level of 1*/
+  -webkit-transition: all 0.5s linear 0s;
+  transition: all 0.5s linear 0s;
 }
 .menu ul li {
   list-style-type: none;
@@ -103,7 +105,10 @@
   text-align: center;
 }
 .menu--open {
-  display: block;
+  width: 350px;
+  opacity: 1;
+  -webkit-transition: all 0.5s linear 0s;
+  transition: all 0.5s linear 0s;
 }
 html,
 body {
